--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -3,34 +3,19 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Vatsala's websites</title>
-	<style type="text/css">
-		body 
-		{
-			background-color:green;
-		}
-	</style>
-		  
+    <title>Vatsala's Website</title>
 </head>
 <body>
 	<script type="text/javascript">
-		function Clickhere()
-		{
-			alert("hi you have clicked the button");
-		}
-		function Change_Content() {
-			document.getElementById('hid').innerHTML = "My name is darshan";
-		}
-		function modify() {
-			document.getElementById('hid').innerHTML = "My name is darshan";
-		}
-	</script>
-	<h1 ic="My name is Vatsala"></h1>
-	<img src="Vatsala SJ.jpg" width="500" height="500" id="img1">;
 
-	<button onclick="Clickhere()">click me</button>
-	<button onclick="Change_Content()">click me to change the name in h2 content</button>
-	<button onclick="modify()"> click me to change the size of image </button>
+		student = { id: 52, name: "Vatsala", dept: "EEE" };
+		document.write(student.id + "<br>");
+		document.write(student.name + "<br>");
+		document.write(student.dept + "<br>");
+
+	</script>
+
+	<!--document.write("===================================================<br>");-->
 
 
 </body>
